# PiPico

./: .gitmodules  0README.md
AirCar/: CMakeLists.txt  build_it  gdbstart
AirCar/aircar/: CMakeLists.txt  aircar.c  version.h
AirCar/aircar/disk_driver/: disk.h  diskio.c  ramdisk.c  ramdisk.h
AirCar/aircar/usb/: CMakeLists.txt
AirCar/aircar/usb/src/: msc_disk_dual.c
AirCar/kicad/AirCar/: AirCar.kicad_prl  AirCar.kicad_pro  AirCar.kicad_sch  sym-lib-table
AirCar/kicad/AirCar-Proto/: AirCar-Proto.csv  AirCar-Proto.kicad_dru  AirCar-Proto.kicad_pcb  AirCar-Proto.kicad_prl  AirCar-Proto.kicad_pro  AirCar-Proto.kicad_sch  AirCar-Proto.xml  fp-info-cache  fp-lib-table  sym-lib-table
AirCar/kicad/AirCar-Proto/Gerbers/V0.1_jlcpcb/: AirCar-Proto-B_Cu.gbr  AirCar-Proto-B_Mask.gbr  AirCar-Proto-B_Paste.gbr  AirCar-Proto-B_Silkscreen.gbr  AirCar-Proto-Edge_Cuts.gbr  AirCar-Proto-F_Cu.gbr  AirCar-Proto-F_Mask.gbr  AirCar-Proto-F_Paste.gbr  AirCar-Proto-F_Silkscreen.gbr  AirCar-Proto-NPTH.drl  AirCar-Proto-PTH.drl  AirCar-Proto-job.gbrjob
AirCar/kicad/QR-Codes/: HW_V0.1.kicad_mod  Untitled.kicad_mod
